--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <!-- navbar start -->
         <section class="container">
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand fs-1 fw-bold edu" href="#">ProCode</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,6 +51,48 @@
         </section>
         <!-- navbar end -->
     </header>
+    <main>
+        <!-- slider -->
+        <section class="container mt-5 rounded">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption bottom-0">
+                            <h1 class="fw-bold">Get Start Coding Fast</h1>
+                            <p>It is a long established fact that a reader will be distracted by the
+                                readable content of
+                                a page when looking at its
+                                layout.</p>
+                            <button type="button" class="btn btn-primary fw-bold px-4">Get strated</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption bottom-0">
+                            <h1 class="fw-bold">Get Start Coding Fast</h1>
+                            <p>It is a long established fact that a reader will be distracted by the
+                                readable content of
+                                a page when looking at its
+                                layout.</p>
+                            <button type="button" class="btn btn-primary fw-bold px-4">Get strated</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider end -->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
