--- a/index.html
+++ b/index.html
@@ -92,6 +92,103 @@
             </div>
         </section>
         <!-- slider end -->
+
+        <!-- popular Courses -->
+        <section class="container mt-5">
+            <div id="popular-courses " class="container ">
+                <div class="text-center">
+                    <div class="Popular-Courses-text">
+                        <h2 class="fw-bold">Discover Our Popular Courses</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page
+                            when
+                            looking at its
+                            layout.</p>
+                    </div>
+                </div>
+                <div class="mt-5">
+                    <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2 g-2">
+                        <div class="col d-sm-flex justify-content-between border border-1 rounded p-none"
+                            style="padding:0;">
+                            <div>
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="course-text d-flex flex-column justify-content-center px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                        <div class="col d-sm-flex justify-content-between border border-1 rounded p-none"
+                            style="padding:0;">
+                            <div>
+                                <img class="w-100" src="images/course/course-2.png" alt="">
+                            </div>
+                            <div class="course-text d-flex flex-column justify-content-center px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                        <div class="col d-sm-flex justify-content-between border border-1 rounded p-none"
+                            style="padding:0;">
+                            <div>
+                                <img class="w-100" src="images/course/course-3.png" alt="">
+                            </div>
+                            <div class="course-text d-flex flex-column justify-content-center px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                        <div class="col d-sm-flex justify-content-between border border-1 rounded p-none"
+                            style="padding:0;">
+                            <div>
+                                <img class="w-100" src="images/course/course-4.png" alt="">
+                            </div>
+                            <div class="course-text d-flex flex-column justify-content-center px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                        <div class="col d-sm-flex justify-content-between border border-1 rounded p-none"
+                            style="padding:0;">
+                            <div>
+                                <img class="w-100" src="images/course/course-5.png" alt="">
+                            </div>
+                            <div class="course-text d-flex flex-column justify-content-center px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                        <div class="col d-sm-flex justify-content-between border border-1 rounded p-none"
+                            style="padding:0;">
+                            <div>
+                                <img class="w-100" src="images/course/course-6.png" alt="">
+                            </div>
+                            <div class="course-text d-flex flex-column justify-content-center px-3">
+                                <h5>Fundamental Of UI/UX Design</h5>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <p class="text-primary fw-bold">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <div class="Popular-Courses-text">
+                        <button type="button" class="btn btn-primary fw-bold px-4 mt-3">See More Courses</button>
+                    </div>
+                </div>
+        </section>
+        <!-- popular Courses end-->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
