--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption bottom-0">
-                            <h1 class="fw-bold">Get Start Coding Fast</h1>
+                        <div
+                            class="carousel-caption top-0 start-0 end-0 bottom-0 d-flex flex-column justify-content-center align-items-center w-75 m-auto">
+                            <h1 class="fw-bold mb-sm-4">Get Start Coding Fast</h1>
                             <p>It is a long established fact that a reader will be distracted by the
                                 readable content of
                                 a page when looking at its
                                 layout.</p>
-                            <button type="button" class="btn btn-primary fw-bold px-4">Get strated</button>
+                            <button type="button" class="btn btn-primary fw-bold px-4 mt-sm-4">Get strated</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -184,11 +185,164 @@
                 </div>
                 <div class="text-center">
                     <div class="Popular-Courses-text">
-                        <button type="button" class="btn btn-primary fw-bold px-4 mt-3">See More Courses</button>
+                        <button type="button" class="btn btn-primary fw-bold px-4 mt-5">See More Courses</button>
                     </div>
                 </div>
         </section>
         <!-- popular Courses end-->
+        <!-- ------------------------------------------------------------------------- -->
+        <!-- Ready to join -->
+        <section class="container mt-5">
+            <div id="ready-to-join"
+                class="bg-primary rounded p-5 d-flex flex-column flex-md-column flex-lg-row align-items-center justify-content-sm-center justify-content-md-center justify-content-lg-between ">
+                <div class=" text-center text-lg-start" style="max-width: 400px;">
+                    <h1 class="fw-bold text-light">Ready to join?</h1>
+                    <p class="text-light">It is a long established fact that a reader will be distracted by the
+                        readable content of
+                        a page when looking at its
+                        layout.</p>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-light fw-bold px-4 mt-4 text-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Register now
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="mb-3">
+                                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                                aria-describedby="emailHelp">
+                                            <div id="emailHelp" class="form-text">We'll never share your email with
+                                                anyone else.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="exampleInputPassword1">
+                                        </div>
+                                        <div class="mb-3 form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modal end -->
+                </div>
+            </div>
+        </section>
+        <!-- Ready to join end-->
+
+        <!-- Accordion -->
+        <section id="Frequently-Asked-Questions">
+            <div class="container mt-5 d-flex flex-column justify-content-center align-items-center">
+                <div style="max-width:500px;" class="text-center">
+                    <h2 class="fw-bold">Frequently Asked Questions</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its
+                        layout.</p>
+                </div>
+                <div style="max-width: 768px;" class="mt-5">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
+                                    until
+                                    the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes
+                                    control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
+                                    any of
+                                    this with
+                                    custom CSS or overriding our default variables. It's also worth noting that just
+                                    about
+                                    any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes
+                                    control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
+                                    any of
+                                    this with
+                                    custom CSS or overriding our default variables. It's also worth noting that just
+                                    about
+                                    any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until
+                                    the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes
+                                    control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
+                                    any of
+                                    this with
+                                    custom CSS or overriding our default variables. It's also worth noting that just
+                                    about
+                                    any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- Accordion end-->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
