--- a/index.html
+++ b/index.html
@@ -267,24 +267,25 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accordion Item #1
+                                    what is the difference between flexbox and grid?
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until
-                                    the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of
-                                    this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about
-                                    any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p> <strong>Grid:</strong>CSS Grid Layout, is a two-dimensional grid-based layout
+                                        system with rows and columns, making it easier to design
+                                        web pages without having to use floats and positioning. Like tables, grid layout
+                                        allow us to align elements into columns
+                                        and rows.To get started you have to define a container element as a grid with
+                                        display: grid;.</p>
+                                    <p> <strong>Flexbox:</strong> The CSS Flexbox offers a one-dimensional layout. It is
+                                        helpful in allocating and aligning the space among items
+                                        in a container (made of grids). It works with all kinds of display devices and
+                                        screen sizes.
+
+                                        To get started you have to define a container element as a grid with display:
+                                        flex;.</p>
                                 </div>
                             </div>
                         </div>
@@ -292,23 +293,18 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
+                                    what is difference between bootstrap vs tailwind?
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of
-                                    this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about
-                                    any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p> <strong>Tailwind</strong> offers predesigned widgets to build a site from
+                                        scratch with fast UI
+                                        development. <br>
+                                        <strong>Bootstrap</strong> comes with a set of
+                                        pre-styled responsive, mobile-first components that possess a definite UI kit.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -316,24 +312,30 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
+                                    what is css box model?
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until
-                                    the collapse
-                                    plugin adds the appropriate classes that we use to style each element. These classes
-                                    control the overall
-                                    appearance, as well as the showing and hiding via CSS transitions. You can modify
-                                    any of
-                                    this with
-                                    custom CSS or overriding our default variables. It's also worth noting that just
-                                    about
-                                    any HTML can go
-                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p>The CSS box model is essentially a box that wraps around every HTML element. It
+                                        consists of: margins, borders, padding,
+                                        and the actual content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    what is semantic tag in html?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Semantic HTML elements are those that clearly describe their meaning in a human-
+                                        and machine-readable way.</p>
                                 </div>
                             </div>
                         </div>
@@ -343,7 +345,40 @@
 
         </section>
         <!-- Accordion end-->
+
+        <!-- Companies images -->
+        <section id="companies-images" class="d-lg-block d-md-none d-sm-none d-none ">
+            <div class="container mt-5">
+                <div style="max-width:500px;" class="text-center m-auto">
+                    <h2 class="fw-bold">Trusted by over 800+ companies</h2>
+                </div>
+                <div class="d-flex justify-content-between mt-5">
+                    <div><img src="images/company/company-1.png" alt=""></div>
+                    <div><img src="images/company/company-2.png" alt=""></div>
+                    <div><img src="images/company/company-3.png" alt=""></div>
+                    <div><img src="images/company/company-4.png" alt=""></div>
+                    <div><img src="images/company/company-5.png" alt=""></div>
+                    <div><img src="images/company/company-6.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+        <!-- Companies images end-->
     </main>
+    <footer class="bg-dark d-flex justify-content-center align-items-center mt-5">
+        <div class="p-5 text-center">
+            <h2 class="fw-bold text-light">Pro Code</h2>
+            <p class="mt-3">Office 41, Zawaya Buildin, Ghala Muscat,
+                Sultanate of Oman</p>
+            <p>Privacy Ploicy | Terms of use</p>
+            <div class="d-flex justify-content-center mt-3">
+                <div class="px-2"><img src="images/footer-img/facebook.svg" alt=""></div>
+                <div class="px-2"><img src="images/footer-img/linkedin.svg" alt=""></div>
+                <div class="px-2"><img src="images/footer-img/twitter.svg" alt=""></div>
+                <div class="px-2"><img src="images/footer-img/tiktok.svg" alt=""></div>
+            </div>
+
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
