--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <!-- Companies images end-->
     </main>
     <footer class="bg-dark d-flex justify-content-center align-items-center mt-5">
-        <div class="p-5 text-center">
+        <div class="p-5 text-center my-5">
             <h2 class="fw-bold text-light">Pro Code</h2>
             <p class="mt-3">Office 41, Zawaya Buildin, Ghala Muscat,
                 Sultanate of Oman</p>
